--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
+    <!-- contains search bar -->
     <div class="search-area">
         <form id="search-form">
             <h2>Search for a City :</h2>
@@ -29,6 +30,11 @@
         </div>
     </div>
     <div class="search-display">
+    </div>
+    <div class="weather-now">
+    </div>
+    </div>
+    <!-- 5-Day Forecast -->
     <div class="forecast">
     <h3>5-Day Forecast</h3>
     <div class="forecast-container">
