--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App | Kaitlynn Hardigree</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="./assets/styles.css">
@@ -14,7 +12,7 @@
 
 </head>
 <body>
-    <header>
+    <header id="header">
         <h1>Weather Dashboard</h1>
     </header>
     <!-- contains search bar -->
@@ -32,7 +30,6 @@
     <div class="search-display">
     </div>
     <div class="weather-now">
-    </div>
     </div>
     <!-- 5-Day Forecast -->
     <div class="forecast">
@@ -73,6 +70,7 @@
 </div>
 
 
+<script src = "./assets/styles.css"></script>
 
 </body>
 </html>
