--- a/index.html
+++ b/index.html
@@ -1,76 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App | Kaitlynn Hardigree</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <link rel="stylesheet" href="./assets/styles.css">
-
-
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
+  </head>
+  <body>
     <header id="header">
-        <h1>Weather Dashboard</h1>
+      <h1>Weather Dashboard</h1>
     </header>
     <!-- contains search bar -->
     <div class="search-area">
-        <form id="search-form">
-            <h2>Search for a City :</h2>
-            <input type="text" id="search-input" placeholder="Enter a city name" />
-            <button type="submit" id="search-button">Search</button>
-        </form>
-        <div id="search-history">
-            <h3>Search History</h3>
-            <ul id="search-history-list"></ul>
-        </div>
+      <form id="search-form">
+        <h2>Search for a City :</h2>
+        <input type="text" id="search-input" placeholder="Enter a city name" />
+        <button type="submit" id="search-button">Search</button>
+      </form>
+      <div id="search-history">
+        <h3>Search History</h3>
+        <ul id="search-history-list"></ul>
+      </div>
     </div>
-    <div class="search-display">
-    </div>
-    <div class="weather-now">
-    </div>
+    <div class="search-display"></div>
+    <div class="weather-now"></div>
     <!-- 5-Day Forecast -->
     <div class="forecast">
-    <h3>5-Day Forecast</h3>
-    <div class="forecast-container">
+      <h3>5-Day Forecast</h3>
+      <div class="forecast-container">
         <div class="forecast-day box">
-            <h4>Day 1</h4>
-            <img src="" alt="" class="forecast-icon" />
-            <p class="forecast-temp"></p>
-            <p class="forecast-humidity"></p>
+          <h4>Day 1</h4>
+          <img src="" alt="" class="forecast-icon" />
+          <p class="forecast-temp"></p>
+          <p class="forecast-humidity"></p>
         </div>
         <div class="forecast-day box">
-            <h4>Day 2</h4>
-            <img src="" alt="" class="forecast-icon" />
-            <p class="forecast-temp"></p>
-            <p class="forecast-humidity"></p>
+          <h4>Day 2</h4>
+          <img src="" alt="" class="forecast-icon" />
+          <p class="forecast-temp"></p>
+          <p class="forecast-humidity"></p>
         </div>
         <div class="forecast-day box">
-            <h4>Day 3</h4>
-            <img src="" alt="" class="forecast-icon" />
-            <p class="forecast-temp"></p>
-            <p class="forecast-humidity"></p>
+          <h4>Day 3</h4>
+          <img src="" alt="" class="forecast-icon" />
+          <p class="forecast-temp"></p>
+          <p class="forecast-humidity"></p>
         </div>
         <div class="forecast-day box">
-            <h4>Day 4</h4>
-            <img src="" alt="" class="forecast-icon" />
-            <p class="forecast-temp"></p>
-            <p class="forecast-humidity"></p>
+          <h4>Day 4</h4>
+          <img src="" alt="" class="forecast-icon" />
+          <p class="forecast-temp"></p>
+          <p class="forecast-humidity"></p>
         </div>
         <div class="forecast-day box">
-            <h4>Day 5</h4>
-            <img src="" alt="" class="forecast-icon" />
-            <p class="forecast-temp"></p>
-            <p class="forecast-humidity"></p>
+          <h4>Day 5</h4>
+          <img src="" alt="" class="forecast-icon" />
+          <p class="forecast-temp"></p>
+          <p class="forecast-humidity"></p>
         </div>
+      </div>
     </div>
-</div>
-</div>
-
-
-<script src = "./assets/styles.css"></script>
-
-</body>
+    <script src="./assets/script.js"></script>
+  </body>
 </html>
