--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <h1>Weather Dashboard</h1>
     </header>
     <!-- contains search bar -->
-    <div id="search-area">
+    <div id="search-area" class="col-md-3">
+    <div class="row">
       <form id="search-form">
         <h2>Search for a City :</h2>
         <input type="text" id="search-input" placeholder="Enter a city name" />
@@ -36,44 +37,27 @@
         </ul>
       </div>
     </div>
-    <div id="search-display"></div>
-    <div id="weather-now"></div>
-    <!-- 5-Day Forecast -->
-    <div id="forecast">
-      <h3>5-Day Forecast</h3>
-      <div id="forecast-container">
-        <div class="forecast-day box">
-          <h4>Day 1</h4>
-          <img src="" alt="" class="forecast-icon" />
-          <p class="forecast-temp"></p>
-          <p class="forecast-humidity"></p>
-        </div>
-        <div class="forecast-day box">
-          <h4>Day 2</h4>
-          <img src="" alt="" class="forecast-icon" />
-          <p class="forecast-temp"></p>
-          <p class="forecast-humidity"></p>
-        </div>
-        <div class="forecast-day box">
-          <h4>Day 3</h4>
-          <img src="" alt="" class="forecast-icon" />
-          <p class="forecast-temp"></p>
-          <p class="forecast-humidity"></p>
-        </div>
-        <div class="forecast-day box">
-          <h4>Day 4</h4>
-          <img src="" alt="" class="forecast-icon" />
-          <p class="forecast-temp"></p>
-          <p class="forecast-humidity"></p>
-        </div>
-        <div class="forecast-day box">
-          <h4>Day 5</h4>
-          <img src="" alt="" class="forecast-icon" />
-          <p class="forecast-temp"></p>
-          <p class="forecast-humidity"></p>
+    </div>  
+    <!-- weather data -->
+
+    <div class="col-md-9">
+      <div class="row">
+        <div class="current-weather" id="currentWeather">
         </div>
       </div>
     </div>
+
+    <div class="col-md-9">
+      <div class="row">
+        <div class="forecast" id="forecast">
+        </div>
+      </div>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
