--- a/index.html
+++ b/index.html
@@ -23,41 +23,45 @@
       <h1>Weather Dashboard</h1>
     </header>
     <!-- contains search bar -->
-    <div id="search-area" class="col-md-3">
-    <div class="row">
-      <form id="search-form">
-        <h2>Search for a City :</h2>
-        <input type="text" id="search-input" placeholder="Enter a city name" />
-        <button type="submit" id="search-button">Search</button>
-      </form>
-      <div id="search-history">
-        <h3>Search History</h3>
-        <ul id="search-history-list">
-          <button id="clear-history">Clear History</button>
-        </ul>
-      </div>
-    </div>
-    </div>  
-    <!-- weather data -->
-
-    <div class="col-md-9">
-      <div class="row">
-        <div class="current-weather" id="currentWeather">
+    <div class="container custom-container">
+      <div class="d-flex flex-row">
+        <div id="search-area" class="custom-margin">
+          <div class="row">
+            <form id="search-form">
+              <h2>Search for a City :</h2>
+              <input
+                type="text"
+                id="search-input"
+                placeholder="Enter a city name"
+              />
+              <button type="submit" id="search-button">Search</button>
+            </form>
+            <div id="search-history">
+              <h3>Search History</h3>
+              <ul id="search-history-list">
+                <button id="clear-history">Clear History</button>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- weather data -->
+        <div class="flex-grow-1" id="forecast-container">
+          <div class="row" id="forecast">
+            <div id="first-card-container"></div>
+            <div id="other-cards-container"></div>
+            <!-- Forecast cards will be appended here -->
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-9">
-      <div class="row">
-        <div class="forecast" id="forecast">
-        </div>
-      </div>
-
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-      <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
