--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
             </form>
             <div id="search-history">
               <h3>Search History</h3>
-              <ul id="search-history-list">
-                <button id="clear-history">Clear History</button>
-              </ul>
+              <button id="clear-history">Clear History</button>
+              <ul id="search-history-list"></ul>
             </div>
           </div>
         </div>
         <!-- weather data -->
-        <div class="flex-grow-1" id="forecast-container">
+        <div class="flex-grow-1 parent" id="forecast-container">
           <div class="row" id="forecast">
             <div id="first-card-container"></div>
             <div id="other-cards-container"></div>
